add users req
